# dcf

./: .gitignore  LICENSE  README.md  SPEC.md  TEST_PLAN.md  pyproject.toml
dcf/: cli.py  core.py  excel.py  store.py
tests/: test_cli_workflow.py  test_spec_contract.py
