[project]
name = "dcf"
version = "0.1.0"
description = "Append-only DCF CLI"
requires-python = ">=3.11"
dependencies = ["openpyxl>=3.1",
  "pyyaml>=6.0"
]

[project.scripts]
dcf = "dcf.cli:main"
[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.package-data]
[tool.setuptools.packages.find]
where = ["."]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
